1.Add sourcetree config to .gitconfig 2. add nginx config file nginx.conf 80.conf and 8080.conf 3. Add anaconda

--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,7 @@
 	email = pfzhang1987@gmail.com
 [core]
 	editor = vim
+	excludesfile = /Users/dafei/.gitignore_global
 [alias]
 	st = status
 	co = checkout
@@ -23,3 +24,9 @@
 	clean = git hawser clean %f
 	smudge = git hawser smudge %f
 	required = true
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
